--- a/JSTests/test262/config.yaml
+++ b/JSTests/test262/config.yaml
@@ -337,6 +337,7 @@ skip:
     - test/built-ins/Temporal/ZonedDateTime/compare/argument-propertybag-calendar-wrong-type.js
     - test/built-ins/Temporal/ZonedDateTime/compare/argument-string-calendar-annotation.js
     - test/built-ins/Temporal/ZonedDateTime/compare/argument-string-unknown-annotation.js
+    - test/built-ins/Temporal/ZonedDateTime/prototype/withPlainTime/argument-string-calendar-annotation.js
 
     # Depends on PlainMonthDay
     - test/built-ins/Temporal/Duration/prototype/round/largestunit-plurals-accepted.js
@@ -436,6 +437,9 @@ skip:
     - test/built-ins/Temporal/PlainYearMonth/prototype/since/argument-string-date-with-utc-offset.js
     - test/built-ins/Temporal/PlainYearMonth/prototype/until/argument-string-calendar-annotation.js
     - test/built-ins/Temporal/PlainYearMonth/prototype/until/argument-string-date-with-utc-offset.js
+    - test/built-ins/Temporal/ZonedDateTime/prototype/since/argument-string-calendar-annotation.js
+    - test/built-ins/Temporal/ZonedDateTime/prototype/since/argument-string-unknown-annotation.js
+    - test/built-ins/Temporal/ZonedDateTime/prototype/withPlainTime/argument-string-unknown-annotation.js
 
     # Depends on Temporal.ZonedDateTime
     - test/built-ins/Temporal/Duration/compare/relativeto-zoneddatetime-negative-epochnanoseconds.js
